logs/info_logs.log
08/25/2024 16:32:41 - main_files.decorator.decorator_func - INFO - Function execute: args: (<main_files.database.db_setting.Database object at 0x000002363E0E9750>, "\n        CREATE TABLE IF NOT EXISTS USERS (\n        ID SERIAL PRIMARY KEY,\n        FIRSTNAME VARCHAR(255) NOT NULL,\n        LASTNAME VARCHAR(255) NOT NULL,\n        EMAIL VARCHAR(255) NOT NULL UNIQUE,\n        PASSWORD VARCHAR(256) NOT NULL,\n        ROLE VARCHAR(255) NOT NULL DEFAULT 'user',\n        IS_LOGIN BOOLEAN DEFAULT FALSE,\n        CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP\n        );\n        ") kwargs: {}, result: None executed successfully.
08/25/2024 16:32:41 - main_files.decorator.decorator_func - INFO - Function create_user_table: args: (<page.auth.auth.Auth object at 0x000002363E9D18D0>,) kwargs: {}, result: True executed successfully.
08/25/2024 16:32:44 - main_files.decorator.decorator_func - INFO - Function execute: args: (<main_files.database.db_setting.Database object at 0x000002363E0E9750>, 'UPDATE users SET IS_LOGIN=FALSE;') kwargs: {}, result: None executed successfully.
08/25/2024 16:32:44 - main_files.decorator.decorator_func - INFO - Function logout: args: (<page.auth.auth.Auth object at 0x000002363E9D18D0>,) kwargs: {}, result: True executed successfully.
08/25/2024 16:32:51 - main_files.decorator.decorator_func - INFO - Function login: args: (<page.auth.auth.Auth object at 0x000002363E9D18D0>,) kwargs: {}, result: {'is_login': True, 'role': 'super_admin'} executed successfully.
08/25/2024 16:34:33 - main_files.decorator.decorator_func - ERROR - Function update_manager: invalid literal for int() with base 10: 'er'
Traceback (most recent call last):
  File "c:\Jobir n\car_dealership\main_files\decorator\decorator_func.py", line 21, in wrapper
    result = func(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^
  File "c:\Jobir n\car_dealership\role\super_admin\manager.py", line 77, in update_manager
    manager_id = int(input("Enter manager ID: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'er'
08/25/2024 16:35:16 - main_files.decorator.decorator_func - ERROR - Function execute: syntax error at or near "1"
LINE 8:                 status BOOLEAN DEFAULT False NOT NULL,1
                                                              ^
Traceback (most recent call last):
  File "c:\Jobir n\car_dealership\main_files\decorator\decorator_func.py", line 21, in wrapper
    result = func(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^
  File "c:\Jobir n\car_dealership\main_files\database\db_setting.py", line 37, in execute
    self.cursor.execute(query, params)
  File "c:\Users\user\AppData\Local\Programs\Python\Python311\Lib\site-packages\psycopg2\extras.py", line 146, in execute
    return super().execute(query, vars)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
psycopg2.errors.SyntaxError: syntax error at or near "1"
LINE 8:                 status BOOLEAN DEFAULT False NOT NULL,1
                                                              ^

08/25/2024 16:35:17 - main_files.decorator.decorator_func - INFO - Function create_manager_table: args: (<role.super_admin.manager.Manager object at 0x000002363EA614D0>,) kwargs: {}, result: None executed successfully.
08/25/2024 16:35:27 - main_files.decorator.decorator_func - INFO - Function add_manager: args: (<role.super_admin.manager.Manager object at 0x000002363EA614D0>,) kwargs: {}, result: None executed successfully.
08/25/2024 16:35:29 - main_files.decorator.decorator_func - INFO - Function execute: args: (<main_files.database.db_setting.Database object at 0x000002363EA73790>, '\n        INSERT INTO manager (name, email, phone_number, password, filial_id) \n        VALUES (%s, %s, %s, %s, %s);\n        ', ('', '1', '1', '6b86b273ff34fce19d6b804eff5a3f5747ada4eaa22f1d49c01e52ddb7875b4b', '1')) kwargs: {}, result: None executed successfully.
08/25/2024 16:35:29 - main_files.decorator.decorator_func - INFO - Function execute_query: args: ('\n        INSERT INTO manager (name, email, phone_number, password, filial_id) \n        VALUES (%s, %s, %s, %s, %s);\n        ', ('', '1', '1', '6b86b273ff34fce19d6b804eff5a3f5747ada4eaa22f1d49c01e52ddb7875b4b', '1')) kwargs: {}, result: None executed successfully.
08/25/2024 16:35:32 - main_files.decorator.decorator_func - INFO - Function manager_menu_for_sup_admin: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:35:32 - main_files.decorator.decorator_func - INFO - Function manager_menu_for_sup_admin: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:35:32 - main_files.decorator.decorator_func - INFO - Function manager_menu_for_sup_admin: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:35:44 - main_files.decorator.decorator_func - ERROR - Function execute: syntax error at or near "1"
LINE 8:                 status BOOLEAN DEFAULT False NOT NULL,1
                                                              ^
Traceback (most recent call last):
  File "c:\Jobir n\car_dealership\main_files\decorator\decorator_func.py", line 21, in wrapper
    result = func(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^
  File "c:\Jobir n\car_dealership\main_files\database\db_setting.py", line 37, in execute
    self.cursor.execute(query, params)
  File "c:\Users\user\AppData\Local\Programs\Python\Python311\Lib\site-packages\psycopg2\extras.py", line 146, in execute
    return super().execute(query, vars)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
psycopg2.errors.SyntaxError: syntax error at or near "1"
LINE 8:                 status BOOLEAN DEFAULT False NOT NULL,1
                                                              ^

08/25/2024 16:35:44 - main_files.decorator.decorator_func - INFO - Function create_manager_table: args: (<role.super_admin.manager.Manager object at 0x000002363EA73390>,) kwargs: {}, result: None executed successfully.
08/25/2024 16:46:37 - main_files.decorator.decorator_func - INFO - Function add_manager: args: (<role.super_admin.manager.Manager object at 0x000002363EA73390>,) kwargs: {}, result: None executed successfully.
08/25/2024 16:46:38 - main_files.decorator.decorator_func - INFO - Function manager_menu_for_sup_admin: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:46:38 - main_files.decorator.decorator_func - INFO - Function manager_menu_for_sup_admin: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:46:40 - main_files.decorator.decorator_func - ERROR - Function execute: invalid input syntax for type integer: ""
LINE 3: ...c1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855', '');
                                                                   ^
Traceback (most recent call last):
  File "c:\Jobir n\car_dealership\main_files\decorator\decorator_func.py", line 21, in wrapper
    result = func(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^
  File "c:\Jobir n\car_dealership\main_files\database\db_setting.py", line 37, in execute
    self.cursor.execute(query, params)
  File "c:\Users\user\AppData\Local\Programs\Python\Python311\Lib\site-packages\psycopg2\extras.py", line 146, in execute
    return super().execute(query, vars)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
psycopg2.errors.InvalidTextRepresentation: invalid input syntax for type integer: ""
LINE 3: ...c1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855', '');
                                                                   ^

08/25/2024 16:46:40 - main_files.decorator.decorator_func - INFO - Function execute_query: args: ('\n        INSERT INTO manager (name, email, phone_number, password, filial_id) \n        VALUES (%s, %s, %s, %s, %s);\n        ', ('Jobir', '', '', 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855', '')) kwargs: {}, result: None executed successfully.
08/25/2024 16:46:42 - main_files.decorator.decorator_func - ERROR - Function logout: Auth.logout() missing 1 required positional argument: 'self'
Traceback (most recent call last):
  File "c:\Jobir n\car_dealership\main_files\decorator\decorator_func.py", line 21, in wrapper
    result = func(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^
TypeError: Auth.logout() missing 1 required positional argument: 'self'
08/25/2024 16:46:42 - main_files.decorator.decorator_func - INFO - Function auth_menu: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:46:42 - main_files.decorator.decorator_func - INFO - Function super_admin_menu: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:46:42 - main_files.decorator.decorator_func - INFO - Function super_admin_menu: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:46:42 - main_files.decorator.decorator_func - INFO - Function super_admin_menu: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:46:44 - main_files.decorator.decorator_func - ERROR - Function logout: Auth.logout() missing 1 required positional argument: 'self'
Traceback (most recent call last):
  File "c:\Jobir n\car_dealership\main_files\decorator\decorator_func.py", line 21, in wrapper
    result = func(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^
TypeError: Auth.logout() missing 1 required positional argument: 'self'
08/25/2024 16:46:44 - main_files.decorator.decorator_func - INFO - Function auth_menu: args: () kwargs: {}, result: None executed successfully.
08/25/2024 16:46:44 - main_files.decorator.decorator_func - INFO - Function auth_menu: args: () kwargs: {}, result: None executed successfully.
